compiler/testData/diagnostics/tests/returnTypeMismatchOnComplexAnonymousFunctionInReturnOfLambda.diag.txt
/returnTypeMismatchOnComplexAnonymousFunctionInReturnOfLambda.kt:12:23: error: type mismatch: inferred type is () -> String but String was expected
    var str: String = runLike {
                      ^^^^^^^^^
/returnTypeMismatchOnComplexAnonymousFunctionInReturnOfLambda.kt:13:9: error: type mismatch: inferred type is () -> String but String was expected
        fun(): String {
        ^^^^^^^^^^^^^^^
/returnTypeMismatchOnComplexAnonymousFunctionInReturnOfLambda.kt:14:30: error: type mismatch: inferred type is String? but String was expected
            if (true) return returnNullableString()
                             ^^^^^^^^^^^^^^^^^^^^^^
/returnTypeMismatchOnComplexAnonymousFunctionInReturnOfLambda.kt:18:11: error: type mismatch: inferred type is () -> String but String was expected
    str = runLike {
          ^^^^^^^^^
/returnTypeMismatchOnComplexAnonymousFunctionInReturnOfLambda.kt:19:9: error: type mismatch: inferred type is () -> String but String was expected
        fun(): String {
        ^^^^^^^^^^^^^^^

